Fix device registration lifecycle
